--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div id="lead">
         <div id="lead-content">
             <h1>Matilda Pohjanen</h1>
-            <h2>Software Engineer??</h2>
+            <h2>Software Developer</h2>
             <a href="#" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
@@ -73,7 +73,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        huh?
+                        18 y.o. so employ me pls
                     </p>
                 </div>
             </div>
@@ -116,13 +116,13 @@
                     <div class="project-image">
                         <img src="images/project.jpg" />
                     </div>
-                    <!-- End .project-image -->
+                    <!-- End .project-image --> 
                     <div class="project-info">
-                        <h3>Sparkleland</h3>
+                        <h3>Sparkle Land</h3>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https://algam3r.itch.io/sparkle-land">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -134,11 +134,11 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Cloud pigeon thing</h3>
+                        <h3>Cloud Dodge</h3>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https://algam3r.itch.io/cloud-dodge">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
