--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="lead-content">
             <h1>Matilda Pohjanen</h1>
             <h2>Software Developer</h2>
-            <a href="#" class="btn-rounded-white">Download Resume</a>
+            <a href="#" class="btn-rounded-white">Download CV</a>
         </div>
         <!-- End #lead-content -->
 
@@ -73,7 +73,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        18 y.o. so employ me pls
+                        I am an 18 year old......... yea.......
                     </p>
                 </div>
             </div>
@@ -88,7 +88,7 @@
                 <h3>Power</h3>
                 <h4>Job practise (TJK)</h4>
                 <p>
-                   ye :D
+                   A six week working perioid at an elecronics store, where I did basic customer service, cleaned, stocked shelves. good good yes yes
                 </p>
             </div>
         </div>
@@ -100,9 +100,9 @@
         <div class="education-block">
             <h3>OSAO</h3>
             <span class="education-date">Sept 2021 - Sept 202x</span>
-            <h4>Bachelor of Science in Computer Science</h4>
+            <h4>smtn</h4>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                and smtn
             </p>
         </div>
     </div>
