olen niiiiiiiiiiiiiiiiiiiiiin iloinenenernern

--- a/index-OSAO-21A-0047.html
+++ b/index-OSAO-21A-0047.html
@@ -50,10 +50,11 @@
         <div id="lead-content">
             <h1>Matilda Pohjanen</h1>
             <h2>Software Developer</h2>
+            <a href="#" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
-    <div id="lead-overlay"></div>
+        <div id="lead-overlay"></div>
 
         <div id="lead-down">
             <span>
@@ -72,8 +73,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        I am an 18 year old student, aspiring to become a game level designer.
-                        I'm ready and eager to learn new things when needed.
+                        18 y.o. so employ me pls
                     </p>
                 </div>
             </div>
@@ -88,9 +88,7 @@
                 <h3>Power</h3>
                 <h4>Job practise (TJK)</h4>
                 <p>
-                    A six week working perioid at an elecronics store.
-                    I helped customers with things they asked for, cleaned around the store,
-                     stocked the shelves and did many other things I was asked to do.
+                   ye :D
                 </p>
             </div>
         </div>
@@ -102,9 +100,9 @@
         <div class="education-block">
             <h3>OSAO</h3>
             <span class="education-date">Sept 2021 - Sept 202x</span>
-            <h4>Software Developer</h4>
+            <h4>Bachelor of Science in Computer Science</h4>
             <p>
-                Currently studying at OSAO. aa a a a a 
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
             </p>
         </div>
     </div>
@@ -116,13 +114,13 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/Sparkle2.png" />
+                        <img src="images/project.jpg" />
                     </div>
                     <!-- End .project-image --> 
                     <div class="project-info">
                         <h3>Sparkle Land</h3>
                         <p>
-                            A first person 3D game where you fight against small waves of enemies within the time limit as a unicorn.
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
                         </p>
                         <a href="https://algam3r.itch.io/sparkle-land">View Project</a>
                     </div>
@@ -132,13 +130,13 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/Cloud2.png" />
+                        <img src="images/project.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
                         <h3>Cloud Dodge</h3>
                         <p>
-                            A pixelated 2D mobile game where you dodge clouds as a pigeon. Inspired by Flappy Bird.
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
                         </p>
                         <a href="https://algam3r.itch.io/cloud-dodge">View Project</a>
                     </div>
@@ -180,7 +178,7 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; <span id="current-year">2024</span> Matilda Pohjanen
+                        Copyright &copy; <span id="current-year">2023</span> Matilda Pohjanen
                     </p>
                 </div>
                 <div class="col-sm-2 top">
@@ -191,10 +189,22 @@
                 <div class="col-sm-5 social">
                     <ul>
                         <li>
-                            <a href="https://github.com/Hattuilija" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                            <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://trello.com/u/hattererer" target="_blank"><i class="fa fa-trello" aria-hidden="true"></i></a>
+                            <a href="https://stackoverflow.com/" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://linkedin.com/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://plus.google.com/" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
                         </li>
                     </ul>
                 </div>
