--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        I am an 18 year old student, aspiring to become a game level designer.
-                        I'm ready and eager to learn new things when needed.
+                        I am a 19-year-old student with a passion for software development.
+                         I'm always eager to learn new skills and take on new challenges.
                     </p>
                 </div>
             </div>
@@ -88,11 +88,18 @@
                 <h3>Power</h3>
                 <h4>Job practise (TJK)</h4>
                 <p>
-                    A six week working perioid at an elecronics store.
-                    I helped customers with things they asked for, cleaned around the store,
+                     A six week job perioid at an elecronics store.
+                     Helped customers with things they asked for, cleaned around the store,
                      stocked the shelves and did many other things I was asked to do.
                 </p>
             </div>
+                    <div data-date="2nd of September 2024 – 20th of December 2024">
+                        <h3>SkyLED</h3>
+                        <h4>Job practise (TJK)</h4>
+                         <p>
+                              A three month job perioid.
+                        </p>
+                    </div>
         </div>
     </div>
     <!-- End #experience -->
@@ -101,10 +108,10 @@
         <h2 class="heading">Education</h2>
         <div class="education-block">
             <h3>OSAO</h3>
-            <span class="education-date">Sept 2021 - Sept 202x</span>
+            <span class="education-date">September 2021 - February 2025</span>
             <h4>Software Developer</h4>
             <p>
-                Currently studying at OSAO. aa a a a a 
+                Studied software and video game development at OSAO. 
             </p>
         </div>
     </div>
@@ -164,12 +171,12 @@
     <div id="contact">
         <h2>Get in Touch</h2>
         <div id="contact-form">
-            <form method="POST" action="https://formspree.io/email@email.com">
-                <input type="hidden" name="_subject" value="Contact request from personal website" />
-                <input type="email" name="_replyto" placeholder="Your email" required>
-                <textarea name="message" placeholder="Your message" required></textarea>
-                <button type="submit">Send</button>
-            </form>
+            <p>
+                Phone number: +358 40 1504582
+            </p>
+            <p>
+                E-mail address: matilda.pohjanen@gmail.com
+            </p>
         </div>
         <!-- End #contact-form -->
     </div>
@@ -180,7 +187,7 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; <span id="current-year">2024</span> Matilda Pohjanen
+                        Copyright &copy; <span id="current-year">2025</span> Matilda Pohjanen
                     </p>
                 </div>
                 <div class="col-sm-2 top">
