--- a/index.html
+++ b/index.html
@@ -72,8 +72,11 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        I am a 19-year-old student with a passion for software development.
+                         I am a 19-year-old student with a passion for software development.
                          I'm always eager to learn new skills and take on new challenges.
+                         I have learned both web and game development, but 
+                         I mostly specialice in video game programing via Unity, but I'd
+                         be happy to try something new.
                     </p>
                 </div>
             </div>
@@ -86,18 +89,19 @@
         <div id="experience-timeline">
             <div data-date="2nd of May 2022 – 17th of June 2022">
                 <h3>Power</h3>
-                <h4>Job practise (TJK)</h4>
+                <h4>Internship (TJK)</h4>
                 <p>
-                     A six week job perioid at an elecronics store.
-                     Helped customers with things they asked for, cleaned around the store,
-                     stocked the shelves and did many other things I was asked to do.
+                     Helped customers and salespersons with various tasks,
+                     kept the store and shelves clean.
+                     Stocked the shelves and installed electronic price tags.
                 </p>
             </div>
                     <div data-date="2nd of September 2024 – 20th of December 2024">
-                        <h3>SkyLED</h3>
-                        <h4>Job practise (TJK)</h4>
+                        <h3>SkyLED Finland OY</h3>
+                        <h4>Internship (TJK)</h4>
                          <p>
-                              A three month job perioid.
+                              Worked as a tester in the development team, helped visualize the project worked on,
+                              did other minor tasks outside the coding.
                         </p>
                     </div>
         </div>
